fixed some things and added some extra checks for stuff (still working on the item icon dumper screen though)